Use forked version of epub.js

--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "buffer": "^5.1.0",
-    "epubjs": "^0.3.63",
+    "epubjs": "johanpoirier/epub.js#fix-webpub-manifest-load",
+    "event-emitter": "^0.3.5",
     "events": "^3.0.0",
     "gulp": "^3.9.1",
     "i": "^0.3.6",
     "jszip": "^3.1.5",
     "lodash": "^4.17.10",
     "path-webpack": "0.0.3",
+    "react": "16.3.1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.9.12",
     "react-native-orientation": "^3.1.3",
