--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "buffer": "^5.1.0",
-    "epubjs": "johanpoirier/epub.js#tea",
+    "epubjs": "johanpoirier/epub.js#fix-webpub-manifest-load",
     "event-emitter": "^0.3.5",
     "events": "^3.0.0",
     "gulp": "^3.9.1",
