--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lodash": "^4.17.10",
     "path-webpack": "0.0.3",
     "react": "16.3.1",
-    "react-native-fetch-blob": "^0.10.8",
+    "rn-fetch-blob": "^0.10.12",
     "react-native-fs": "^2.9.12",
     "react-native-orientation": "^3.1.3",
     "react-native-static-server": "^0.3.0",
