--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "buffer": "^5.1.0",
-    "epubjs": "johanpoirier/epub.js#tea",
+    "epubjs": "github:johanpoirier/epub.js#tea",
     "event-emitter": "^0.3.5",
     "events": "^3.0.0",
     "gulp": "^3.9.1",
@@ -20,11 +20,11 @@
     "lodash": "^4.17.10",
     "path-webpack": "0.0.3",
     "react": "16.3.1",
-    "rn-fetch-blob": "^0.10.12",
     "react-native-fs": "^2.9.12",
     "react-native-orientation": "^3.1.3",
     "react-native-wkwebview-reborn": "^1.20.0",
     "react-native-zip-archive": "^2.2.3",
+    "rn-fetch-blob": "^0.10.12",
     "stream": "0.0.2",
     "stream-browserify": "^2.0.1",
     "util": "^0.11.0"
