--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "jest": "23.1.0",
     "jest-react-native": "18.0.0",
     "react-test-renderer": "16.4.1",
-    "webpack": "^4.7.0"
+    "webpack": "^4.7.0",
+    "webpack-cli": "^3.1.1"
   },
   "jest": {
     "preset": "jest-react-native"
